--- a/full_agentic_build/Dockerfile
+++ b/full_agentic_build/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-ENV DATA_DIR=/app/data
-ENV VECTOR_DIR=/app/data/vectorstore
-EXPOSE 8501
-CMD ["streamlit", "run", "ui/streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+ENV STREAMLIT_SERVER_PORT=7860
+EXPOSE 7860
+CMD ["streamlit", "run", "ui/streamlit_app.py", "--server.address=0.0.0.0", "--server.port=7860"]
