Issue #4: Quit UX changes and Streamlit width deprecation fix; add smoke test. Refs #5: show guardrail reason in Results. Chore: gitignore vectorstore, .vscode, .continue, data/*.json and untrack data files.

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,13 @@ __marimo__/
 
 # Project-local issue definitions (do not track)
 /issues.json
+
+# Local dev artifacts
+.continue/
+.vscode/
+
+# Vector store artifacts
+full_agentic_build/data/vectorstore/
+
+# Data artifacts
+full_agentic_build/data/*.json
