Issue #9: Add maintenance actions to clear emails and vector store; switch to langchain-chroma with fallback; add Maintenance tab; add langchain-chroma to requirements; ignore all data/ folders recursively.

--- a/.gitignore
+++ b/.gitignore
@@ -214,8 +214,6 @@ __marimo__/
 .continue/
 .vscode/
 
-# Vector store artifacts
-full_agentic_build/data/vectorstore/
-
-# Data artifacts
-full_agentic_build/data/*.json
+# Ignore any folder named 'data' and all its contents anywhere in the repo
+data/
+**/data/
