--- a/full_agentic_build/Dockerfile
+++ b/full_agentic_build/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 WORKDIR /app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt langchain-chroma
 COPY . .
 ENV STREAMLIT_SERVER_PORT=7860
 EXPOSE 7860
