Issue #22: add tracked issues.sample.json and ignore mutable issues.json

--- a/.gitignore
+++ b/.gitignore
@@ -220,4 +220,4 @@ data/**
 # Allow small, committed fixtures/configs under root data
 !data/sample_emails/
 !data/sample_emails/**
-!data/issues.json
+!data/issues.sample.json
