--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,11 @@ langchain-openai==1.0.3
 openai==2.8.0
 
 # Vector store
-chromadb==1.3.4
-langchain-chroma>=0.1.3
+chromadb
+langchain-chroma
 
 # UI + parsing
-streamlit==1.51.0
-beautifulsoup4==4.12.3
-pandas==2.2.3
-python-dotenv==1.0.1
-pytest==8.3.3
-ruff==0.14.6
+streamlit
+beautifulsoup4
+pandas
+python-dotenv
